lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> morestatements
Rule 3     morestatements -> block
Rule 4     morestatements -> statement morestatements
Rule 5     block -> statement
Rule 6     block -> { morestatements }
Rule 7     statement -> ifstatement
Rule 8     statement -> loop
Rule 9     statement -> expr ;
Rule 10    statement -> returnstatement ;
Rule 11    statement -> assignstatement ;
Rule 12    statement -> printstatement ;
Rule 13    statement -> BREAK ;
Rule 14    statement -> CONTINUE ;
Rule 15    returnstatement -> RETURN
Rule 16    returnstatement -> RETURN expr
Rule 17    printstatement -> PRINT printables
Rule 18    printables -> printable
Rule 19    printables -> printable , printables
Rule 20    printable -> expr
Rule 21    assignstatement -> assignable = expr
Rule 22    assignstatement -> assignable ASSIGNPLUS expr
Rule 23    assignstatement -> assignable ASSIGNMINUS expr
Rule 24    assignstatement -> assignable ASSIGNTIMES expr
Rule 25    assignstatement -> assignable ASSIGNDIVIDE expr
Rule 26    assignable -> ID
Rule 27    assignable -> ID [ expr , expr ]
Rule 28    expr -> assignable
Rule 29    expr -> INTNUMBER
Rule 30    expr -> FLOATNUMBER
Rule 31    expr -> STRING
Rule 32    expr -> - expr
Rule 33    expr -> expr '
Rule 34    expr -> specialmatrixword ( expr )
Rule 35    expr -> ( expr )
Rule 36    expr -> [ matrixinitializer ]
Rule 37    expr -> expr + expr
Rule 38    expr -> expr - expr
Rule 39    expr -> expr * expr
Rule 40    expr -> expr / expr
Rule 41    expr -> expr MPLUS expr
Rule 42    expr -> expr MMINUS expr
Rule 43    expr -> expr MTIMES expr
Rule 44    expr -> expr MDIVIDE expr
Rule 45    expr -> expr EQ expr
Rule 46    expr -> expr NEQ expr
Rule 47    expr -> expr > expr
Rule 48    expr -> expr < expr
Rule 49    expr -> expr LEQ expr
Rule 50    expr -> expr GEQ expr
Rule 51    specialmatrixword -> ZEROS
Rule 52    specialmatrixword -> ONES
Rule 53    specialmatrixword -> EYE
Rule 54    ifstatement -> IF ( expr ) block
Rule 55    ifstatement -> IF ( expr ) block ELSE block
Rule 56    loop -> forloop
Rule 57    loop -> whileloop
Rule 58    forloop -> FOR ID = rangeoperator block
Rule 59    whileloop -> WHILE ( expr ) block
Rule 60    rangeoperator -> expr : expr
Rule 61    matrixinitializer -> innerlist
Rule 62    matrixinitializer -> morelist
Rule 63    morelist -> vector
Rule 64    morelist -> vector , morelist
Rule 65    vector -> [ innerlist ]
Rule 66    innerlist -> expr
Rule 67    innerlist -> expr , innerlist

Terminals, with rules where they appear

'                    : 33
(                    : 34 35 54 55 59
)                    : 34 35 54 55 59
*                    : 39
+                    : 37
,                    : 19 27 64 67
-                    : 32 38
/                    : 40
:                    : 60
;                    : 9 10 11 12 13 14
<                    : 48
=                    : 21 58
>                    : 47
ASSIGNDIVIDE         : 25
ASSIGNMINUS          : 23
ASSIGNPLUS           : 22
ASSIGNTIMES          : 24
BREAK                : 13
CONTINUE             : 14
ELSE                 : 55
EQ                   : 45
EYE                  : 53
FLOATNUMBER          : 30
FOR                  : 58
GEQ                  : 50
ID                   : 26 27 58
IF                   : 54 55
INTNUMBER            : 29
LEQ                  : 49
MDIVIDE              : 44
MMINUS               : 42
MPLUS                : 41
MTIMES               : 43
NEQ                  : 46
ONES                 : 52
PRINT                : 17
RETURN               : 15 16
STRING               : 31
WHILE                : 59
ZEROS                : 51
[                    : 27 36 65
]                    : 27 36 65
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignable           : 21 22 23 24 25 28
assignstatement      : 11
block                : 3 54 55 55 58 59
expr                 : 9 16 20 21 22 23 24 25 27 27 32 33 34 35 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 54 55 59 60 60 66 67
forloop              : 56
ifstatement          : 7
innerlist            : 61 65 67
loop                 : 8
matrixinitializer    : 36
morelist             : 62 64
morestatements       : 2 4 6
printable            : 18 19
printables           : 17 19
printstatement       : 12
rangeoperator        : 58
returnstatement      : 10
specialmatrixword    : 34
start                : 0
statement            : 4 5
vector               : 63 64
whileloop            : 57

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . morestatements
    (3) morestatements -> . block
    (4) morestatements -> . statement morestatements
    (5) block -> . statement
    (6) block -> . { morestatements }
    (7) statement -> . ifstatement
    (8) statement -> . loop
    (9) statement -> . expr ;
    (10) statement -> . returnstatement ;
    (11) statement -> . assignstatement ;
    (12) statement -> . printstatement ;
    (13) statement -> . BREAK ;
    (14) statement -> . CONTINUE ;
    (54) ifstatement -> . IF ( expr ) block
    (55) ifstatement -> . IF ( expr ) block ELSE block
    (56) loop -> . forloop
    (57) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . STRING
    (32) expr -> . - expr
    (33) expr -> . expr '
    (34) expr -> . specialmatrixword ( expr )
    (35) expr -> . ( expr )
    (36) expr -> . [ matrixinitializer ]
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr MPLUS expr
    (42) expr -> . expr MMINUS expr
    (43) expr -> . expr MTIMES expr
    (44) expr -> . expr MDIVIDE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NEQ expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr LEQ expr
    (50) expr -> . expr GEQ expr
    (15) returnstatement -> . RETURN
    (16) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (17) printstatement -> . PRINT printables
    (58) forloop -> . FOR ID = rangeoperator block
    (59) whileloop -> . WHILE ( expr ) block
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (51) specialmatrixword -> . ZEROS
    (52) specialmatrixword -> . ONES
    (53) specialmatrixword -> . EYE

    $end            reduce using rule 1 (start -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    INTNUMBER       shift and go to state 19
    FLOATNUMBER     shift and go to state 20
    STRING          shift and go to state 21
    -               shift and go to state 22
    (               shift and go to state 15
    [               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 29
    ID              shift and go to state 28
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    start                          shift and go to state 1
    morestatements                 shift and go to state 2
    block                          shift and go to state 3
    statement                      shift and go to state 4
    ifstatement                    shift and go to state 6
    loop                           shift and go to state 7
    expr                           shift and go to state 8
    returnstatement                shift and go to state 9
    assignstatement                shift and go to state 10
    printstatement                 shift and go to state 11
    forloop                        shift and go to state 16
    whileloop                      shift and go to state 17
    assignable                     shift and go to state 18
    specialmatrixword              shift and go to state 23

state 1

    (0) S' -> start .



state 2

    (2) start -> morestatements .

    $end            reduce using rule 2 (start -> morestatements .)


state 3

    (3) morestatements -> block .

    $end            reduce using rule 3 (morestatements -> block .)
    }               reduce using rule 3 (morestatements -> block .)


state 4

    (4) morestatements -> statement . morestatements
    (5) block -> statement .
    (3) morestatements -> . block
    (4) morestatements -> . statement morestatements
    (5) block -> . statement
    (6) block -> . { morestatements }
    (7) statement -> . ifstatement
    (8) statement -> . loop
    (9) statement -> . expr ;
    (10) statement -> . returnstatement ;
    (11) statement -> . assignstatement ;
    (12) statement -> . printstatement ;
    (13) statement -> . BREAK ;
    (14) statement -> . CONTINUE ;
    (54) ifstatement -> . IF ( expr ) block
    (55) ifstatement -> . IF ( expr ) block ELSE block
    (56) loop -> . forloop
    (57) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . STRING
    (32) expr -> . - expr
    (33) expr -> . expr '
    (34) expr -> . specialmatrixword ( expr )
    (35) expr -> . ( expr )
    (36) expr -> . [ matrixinitializer ]
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr MPLUS expr
    (42) expr -> . expr MMINUS expr
    (43) expr -> . expr MTIMES expr
    (44) expr -> . expr MDIVIDE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NEQ expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr LEQ expr
    (50) expr -> . expr GEQ expr
    (15) returnstatement -> . RETURN
    (16) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (17) printstatement -> . PRINT printables
    (58) forloop -> . FOR ID = rangeoperator block
    (59) whileloop -> . WHILE ( expr ) block
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (51) specialmatrixword -> . ZEROS
    (52) specialmatrixword -> . ONES
    (53) specialmatrixword -> . EYE

    $end            reduce using rule 5 (block -> statement .)
    }               reduce using rule 5 (block -> statement .)
    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    INTNUMBER       shift and go to state 19
    FLOATNUMBER     shift and go to state 20
    STRING          shift and go to state 21
    -               shift and go to state 22
    (               shift and go to state 15
    [               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 29
    ID              shift and go to state 28
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    statement                      shift and go to state 4
    morestatements                 shift and go to state 33
    block                          shift and go to state 3
    ifstatement                    shift and go to state 6
    loop                           shift and go to state 7
    expr                           shift and go to state 8
    returnstatement                shift and go to state 9
    assignstatement                shift and go to state 10
    printstatement                 shift and go to state 11
    forloop                        shift and go to state 16
    whileloop                      shift and go to state 17
    assignable                     shift and go to state 18
    specialmatrixword              shift and go to state 23

state 5

    (6) block -> { . morestatements }
    (3) morestatements -> . block
    (4) morestatements -> . statement morestatements
    (5) block -> . statement
    (6) block -> . { morestatements }
    (7) statement -> . ifstatement
    (8) statement -> . loop
    (9) statement -> . expr ;
    (10) statement -> . returnstatement ;
    (11) statement -> . assignstatement ;
    (12) statement -> . printstatement ;
    (13) statement -> . BREAK ;
    (14) statement -> . CONTINUE ;
    (54) ifstatement -> . IF ( expr ) block
    (55) ifstatement -> . IF ( expr ) block ELSE block
    (56) loop -> . forloop
    (57) loop -> . whileloop
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . STRING
    (32) expr -> . - expr
    (33) expr -> . expr '
    (34) expr -> . specialmatrixword ( expr )
    (35) expr -> . ( expr )
    (36) expr -> . [ matrixinitializer ]
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr MPLUS expr
    (42) expr -> . expr MMINUS expr
    (43) expr -> . expr MTIMES expr
    (44) expr -> . expr MDIVIDE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NEQ expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr LEQ expr
    (50) expr -> . expr GEQ expr
    (15) returnstatement -> . RETURN
    (16) returnstatement -> . RETURN expr
    (21) assignstatement -> . assignable = expr
    (22) assignstatement -> . assignable ASSIGNPLUS expr
    (23) assignstatement -> . assignable ASSIGNMINUS expr
    (24) assignstatement -> . assignable ASSIGNTIMES expr
    (25) assignstatement -> . assignable ASSIGNDIVIDE expr
    (17) printstatement -> . PRINT printables
    (58) forloop -> . FOR ID = rangeoperator block
    (59) whileloop -> . WHILE ( expr ) block
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (51) specialmatrixword -> . ZEROS
    (52) specialmatrixword -> . ONES
    (53) specialmatrixword -> . EYE

    {               shift and go to state 5
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13
    IF              shift and go to state 14
    INTNUMBER       shift and go to state 19
    FLOATNUMBER     shift and go to state 20
    STRING          shift and go to state 21
    -               shift and go to state 22
    (               shift and go to state 15
    [               shift and go to state 24
    RETURN          shift and go to state 25
    PRINT           shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 29
    ID              shift and go to state 28
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    morestatements                 shift and go to state 34
    block                          shift and go to state 3
    statement                      shift and go to state 4
    ifstatement                    shift and go to state 6
    loop                           shift and go to state 7
    expr                           shift and go to state 8
    returnstatement                shift and go to state 9
    assignstatement                shift and go to state 10
    printstatement                 shift and go to state 11
    forloop                        shift and go to state 16
    whileloop                      shift and go to state 17
    assignable                     shift and go to state 18
    specialmatrixword              shift and go to state 23

state 6

    (7) statement -> ifstatement .

    {               reduce using rule 7 (statement -> ifstatement .)
    BREAK           reduce using rule 7 (statement -> ifstatement .)
    CONTINUE        reduce using rule 7 (statement -> ifstatement .)
    IF              reduce using rule 7 (statement -> ifstatement .)
    INTNUMBER       reduce using rule 7 (statement -> ifstatement .)
    FLOATNUMBER     reduce using rule 7 (statement -> ifstatement .)
    STRING          reduce using rule 7 (statement -> ifstatement .)
    -               reduce using rule 7 (statement -> ifstatement .)
    (               reduce using rule 7 (statement -> ifstatement .)
    [               reduce using rule 7 (statement -> ifstatement .)
    RETURN          reduce using rule 7 (statement -> ifstatement .)
    PRINT           reduce using rule 7 (statement -> ifstatement .)
    FOR             reduce using rule 7 (statement -> ifstatement .)
    WHILE           reduce using rule 7 (statement -> ifstatement .)
    ID              reduce using rule 7 (statement -> ifstatement .)
    ZEROS           reduce using rule 7 (statement -> ifstatement .)
    ONES            reduce using rule 7 (statement -> ifstatement .)
    EYE             reduce using rule 7 (statement -> ifstatement .)
    $end            reduce using rule 7 (statement -> ifstatement .)
    }               reduce using rule 7 (statement -> ifstatement .)
    ELSE            reduce using rule 7 (statement -> ifstatement .)


state 7

    (8) statement -> loop .

    {               reduce using rule 8 (statement -> loop .)
    BREAK           reduce using rule 8 (statement -> loop .)
    CONTINUE        reduce using rule 8 (statement -> loop .)
    IF              reduce using rule 8 (statement -> loop .)
    INTNUMBER       reduce using rule 8 (statement -> loop .)
    FLOATNUMBER     reduce using rule 8 (statement -> loop .)
    STRING          reduce using rule 8 (statement -> loop .)
    -               reduce using rule 8 (statement -> loop .)
    (               reduce using rule 8 (statement -> loop .)
    [               reduce using rule 8 (statement -> loop .)
    RETURN          reduce using rule 8 (statement -> loop .)
    PRINT           reduce using rule 8 (statement -> loop .)
    FOR             reduce using rule 8 (statement -> loop .)
    WHILE           reduce using rule 8 (statement -> loop .)
    ID              reduce using rule 8 (statement -> loop .)
    ZEROS           reduce using rule 8 (statement -> loop .)
    ONES            reduce using rule 8 (statement -> loop .)
    EYE             reduce using rule 8 (statement -> loop .)
    $end            reduce using rule 8 (statement -> loop .)
    }               reduce using rule 8 (statement -> loop .)
    ELSE            reduce using rule 8 (statement -> loop .)


state 8

    (9) statement -> expr . ;
    (33) expr -> expr . '
    (37) expr -> expr . + expr
    (38) expr -> expr . - expr
    (39) expr -> expr . * expr
    (40) expr -> expr . / expr
    (41) expr -> expr . MPLUS expr
    (42) expr -> expr . MMINUS expr
    (43) expr -> expr . MTIMES expr
    (44) expr -> expr . MDIVIDE expr
    (45) expr -> expr . EQ expr
    (46) expr -> expr . NEQ expr
    (47) expr -> expr . > expr
    (48) expr -> expr . < expr
    (49) expr -> expr . LEQ expr
    (50) expr -> expr . GEQ expr

    ;               shift and go to state 35
    '               shift and go to state 36
    +               shift and go to state 37
    -               shift and go to state 38
    *               shift and go to state 39
    /               shift and go to state 40
    MPLUS           shift and go to state 41
    MMINUS          shift and go to state 42
    MTIMES          shift and go to state 43
    MDIVIDE         shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    >               shift and go to state 47
    <               shift and go to state 48
    LEQ             shift and go to state 49
    GEQ             shift and go to state 50


state 9

    (10) statement -> returnstatement . ;

    ;               shift and go to state 51


state 10

    (11) statement -> assignstatement . ;

    ;               shift and go to state 52


state 11

    (12) statement -> printstatement . ;

    ;               shift and go to state 53


state 12

    (13) statement -> BREAK . ;

    ;               shift and go to state 54


state 13

    (14) statement -> CONTINUE . ;

    ;               shift and go to state 55


state 14

    (54) ifstatement -> IF . ( expr ) block
    (55) ifstatement -> IF . ( expr ) block ELSE block

    (               shift and go to state 56


state 15

    (35) expr -> ( . expr )
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . STRING
    (32) expr -> . - expr
    (33) expr -> . expr '
    (34) expr -> . specialmatrixword ( expr )
    (35) expr -> . ( expr )
    (36) expr -> . [ matrixinitializer ]
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr MPLUS expr
    (42) expr -> . expr MMINUS expr
    (43) expr -> . expr MTIMES expr
    (44) expr -> . expr MDIVIDE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NEQ expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr LEQ expr
    (50) expr -> . expr GEQ expr
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (51) specialmatrixword -> . ZEROS
    (52) specialmatrixword -> . ONES
    (53) specialmatrixword -> . EYE

    INTNUMBER       shift and go to state 19
    FLOATNUMBER     shift and go to state 20
    STRING          shift and go to state 21
    -               shift and go to state 22
    (               shift and go to state 15
    [               shift and go to state 24
    ID              shift and go to state 28
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32

    expr                           shift and go to state 57
    assignable                     shift and go to state 58
    specialmatrixword              shift and go to state 23

state 16

    (56) loop -> forloop .

    {               reduce using rule 56 (loop -> forloop .)
    BREAK           reduce using rule 56 (loop -> forloop .)
    CONTINUE        reduce using rule 56 (loop -> forloop .)
    IF              reduce using rule 56 (loop -> forloop .)
    INTNUMBER       reduce using rule 56 (loop -> forloop .)
    FLOATNUMBER     reduce using rule 56 (loop -> forloop .)
    STRING          reduce using rule 56 (loop -> forloop .)
    -               reduce using rule 56 (loop -> forloop .)
    (               reduce using rule 56 (loop -> forloop .)
    [               reduce using rule 56 (loop -> forloop .)
    RETURN          reduce using rule 56 (loop -> forloop .)
    PRINT           reduce using rule 56 (loop -> forloop .)
    FOR             reduce using rule 56 (loop -> forloop .)
    WHILE           reduce using rule 56 (loop -> forloop .)
    ID              reduce using rule 56 (loop -> forloop .)
    ZEROS           reduce using rule 56 (loop -> forloop .)
    ONES            reduce using rule 56 (loop -> forloop .)
    EYE             reduce using rule 56 (loop -> forloop .)
    $end            reduce using rule 56 (loop -> forloop .)
    }               reduce using rule 56 (loop -> forloop .)
    ELSE            reduce using rule 56 (loop -> forloop .)


state 17

    (57) loop -> whileloop .

    {               reduce using rule 57 (loop -> whileloop .)
    BREAK           reduce using rule 57 (loop -> whileloop .)
    CONTINUE        reduce using rule 57 (loop -> whileloop .)
    IF              reduce using rule 57 (loop -> whileloop .)
    INTNUMBER       reduce using rule 57 (loop -> whileloop .)
    FLOATNUMBER     reduce using rule 57 (loop -> whileloop .)
    STRING          reduce using rule 57 (loop -> whileloop .)
    -               reduce using rule 57 (loop -> whileloop .)
    (               reduce using rule 57 (loop -> whileloop .)
    [               reduce using rule 57 (loop -> whileloop .)
    RETURN          reduce using rule 57 (loop -> whileloop .)
    PRINT           reduce using rule 57 (loop -> whileloop .)
    FOR             reduce using rule 57 (loop -> whileloop .)
    WHILE           reduce using rule 57 (loop -> whileloop .)
    ID              reduce using rule 57 (loop -> whileloop .)
    ZEROS           reduce using rule 57 (loop -> whileloop .)
    ONES            reduce using rule 57 (loop -> whileloop .)
    EYE             reduce using rule 57 (loop -> whileloop .)
    $end            reduce using rule 57 (loop -> whileloop .)
    }               reduce using rule 57 (loop -> whileloop .)
    ELSE            reduce using rule 57 (loop -> whileloop .)


state 18

    (28) expr -> assignable .
    (21) assignstatement -> assignable . = expr
    (22) assignstatement -> assignable . ASSIGNPLUS expr
    (23) assignstatement -> assignable . ASSIGNMINUS expr
    (24) assignstatement -> assignable . ASSIGNTIMES expr
    (25) assignstatement -> assignable . ASSIGNDIVIDE expr

    ;               reduce using rule 28 (expr -> assignable .)
    '               reduce using rule 28 (expr -> assignable .)
    +               reduce using rule 28 (expr -> assignable .)
    -               reduce using rule 28 (expr -> assignable .)
    *               reduce using rule 28 (expr -> assignable .)
    /               reduce using rule 28 (expr -> assignable .)
    MPLUS           reduce using rule 28 (expr -> assignable .)
    MMINUS          reduce using rule 28 (expr -> assignable .)
    MTIMES          reduce using rule 28 (expr -> assignable .)
    MDIVIDE         reduce using rule 28 (expr -> assignable .)
    EQ              reduce using rule 28 (expr -> assignable .)
    NEQ             reduce using rule 28 (expr -> assignable .)
    >               reduce using rule 28 (expr -> assignable .)
    <               reduce using rule 28 (expr -> assignable .)
    LEQ             reduce using rule 28 (expr -> assignable .)
    GEQ             reduce using rule 28 (expr -> assignable .)
    =               shift and go to state 59
    ASSIGNPLUS      shift and go to state 60
    ASSIGNMINUS     shift and go to state 61
    ASSIGNTIMES     shift and go to state 62
    ASSIGNDIVIDE    shift and go to state 63


state 19

    (29) expr -> INTNUMBER .

    ;               reduce using rule 29 (expr -> INTNUMBER .)
    '               reduce using rule 29 (expr -> INTNUMBER .)
    +               reduce using rule 29 (expr -> INTNUMBER .)
    -               reduce using rule 29 (expr -> INTNUMBER .)
    *               reduce using rule 29 (expr -> INTNUMBER .)
    /               reduce using rule 29 (expr -> INTNUMBER .)
    MPLUS           reduce using rule 29 (expr -> INTNUMBER .)
    MMINUS          reduce using rule 29 (expr -> INTNUMBER .)
    MTIMES          reduce using rule 29 (expr -> INTNUMBER .)
    MDIVIDE         reduce using rule 29 (expr -> INTNUMBER .)
    EQ              reduce using rule 29 (expr -> INTNUMBER .)
    NEQ             reduce using rule 29 (expr -> INTNUMBER .)
    >               reduce using rule 29 (expr -> INTNUMBER .)
    <               reduce using rule 29 (expr -> INTNUMBER .)
    LEQ             reduce using rule 29 (expr -> INTNUMBER .)
    GEQ             reduce using rule 29 (expr -> INTNUMBER .)
    )               reduce using rule 29 (expr -> INTNUMBER .)
    ,               reduce using rule 29 (expr -> INTNUMBER .)
    ]               reduce using rule 29 (expr -> INTNUMBER .)
    :               reduce using rule 29 (expr -> INTNUMBER .)
    {               reduce using rule 29 (expr -> INTNUMBER .)
    BREAK           reduce using rule 29 (expr -> INTNUMBER .)
    CONTINUE        reduce using rule 29 (expr -> INTNUMBER .)
    IF              reduce using rule 29 (expr -> INTNUMBER .)
    INTNUMBER       reduce using rule 29 (expr -> INTNUMBER .)
    FLOATNUMBER     reduce using rule 29 (expr -> INTNUMBER .)
    STRING          reduce using rule 29 (expr -> INTNUMBER .)
    (               reduce using rule 29 (expr -> INTNUMBER .)
    [               reduce using rule 29 (expr -> INTNUMBER .)
    RETURN          reduce using rule 29 (expr -> INTNUMBER .)
    PRINT           reduce using rule 29 (expr -> INTNUMBER .)
    FOR             reduce using rule 29 (expr -> INTNUMBER .)
    WHILE           reduce using rule 29 (expr -> INTNUMBER .)
    ID              reduce using rule 29 (expr -> INTNUMBER .)
    ZEROS           reduce using rule 29 (expr -> INTNUMBER .)
    ONES            reduce using rule 29 (expr -> INTNUMBER .)
    EYE             reduce using rule 29 (expr -> INTNUMBER .)


state 20

    (30) expr -> FLOATNUMBER .

    ;               reduce using rule 30 (expr -> FLOATNUMBER .)
    '               reduce using rule 30 (expr -> FLOATNUMBER .)
    +               reduce using rule 30 (expr -> FLOATNUMBER .)
    -               reduce using rule 30 (expr -> FLOATNUMBER .)
    *               reduce using rule 30 (expr -> FLOATNUMBER .)
    /               reduce using rule 30 (expr -> FLOATNUMBER .)
    MPLUS           reduce using rule 30 (expr -> FLOATNUMBER .)
    MMINUS          reduce using rule 30 (expr -> FLOATNUMBER .)
    MTIMES          reduce using rule 30 (expr -> FLOATNUMBER .)
    MDIVIDE         reduce using rule 30 (expr -> FLOATNUMBER .)
    EQ              reduce using rule 30 (expr -> FLOATNUMBER .)
    NEQ             reduce using rule 30 (expr -> FLOATNUMBER .)
    >               reduce using rule 30 (expr -> FLOATNUMBER .)
    <               reduce using rule 30 (expr -> FLOATNUMBER .)
    LEQ             reduce using rule 30 (expr -> FLOATNUMBER .)
    GEQ             reduce using rule 30 (expr -> FLOATNUMBER .)
    )               reduce using rule 30 (expr -> FLOATNUMBER .)
    ,               reduce using rule 30 (expr -> FLOATNUMBER .)
    ]               reduce using rule 30 (expr -> FLOATNUMBER .)
    :               reduce using rule 30 (expr -> FLOATNUMBER .)
    {               reduce using rule 30 (expr -> FLOATNUMBER .)
    BREAK           reduce using rule 30 (expr -> FLOATNUMBER .)
    CONTINUE        reduce using rule 30 (expr -> FLOATNUMBER .)
    IF              reduce using rule 30 (expr -> FLOATNUMBER .)
    INTNUMBER       reduce using rule 30 (expr -> FLOATNUMBER .)
    FLOATNUMBER     reduce using rule 30 (expr -> FLOATNUMBER .)
    STRING          reduce using rule 30 (expr -> FLOATNUMBER .)
    (               reduce using rule 30 (expr -> FLOATNUMBER .)
    [               reduce using rule 30 (expr -> FLOATNUMBER .)
    RETURN          reduce using rule 30 (expr -> FLOATNUMBER .)
    PRINT           reduce using rule 30 (expr -> FLOATNUMBER .)
    FOR             reduce using rule 30 (expr -> FLOATNUMBER .)
    WHILE           reduce using rule 30 (expr -> FLOATNUMBER .)
    ID              reduce using rule 30 (expr -> FLOATNUMBER .)
    ZEROS           reduce using rule 30 (expr -> FLOATNUMBER .)
    ONES            reduce using rule 30 (expr -> FLOATNUMBER .)
    EYE             reduce using rule 30 (expr -> FLOATNUMBER .)


state 21

    (31) expr -> STRING .

    ;               reduce using rule 31 (expr -> STRING .)
    '               reduce using rule 31 (expr -> STRING .)
    +               reduce using rule 31 (expr -> STRING .)
    -               reduce using rule 31 (expr -> STRING .)
    *               reduce using rule 31 (expr -> STRING .)
    /               reduce using rule 31 (expr -> STRING .)
    MPLUS           reduce using rule 31 (expr -> STRING .)
    MMINUS          reduce using rule 31 (expr -> STRING .)
    MTIMES          reduce using rule 31 (expr -> STRING .)
    MDIVIDE         reduce using rule 31 (expr -> STRING .)
    EQ              reduce using rule 31 (expr -> STRING .)
    NEQ             reduce using rule 31 (expr -> STRING .)
    >               reduce using rule 31 (expr -> STRING .)
    <               reduce using rule 31 (expr -> STRING .)
    LEQ             reduce using rule 31 (expr -> STRING .)
    GEQ             reduce using rule 31 (expr -> STRING .)
    )               reduce using rule 31 (expr -> STRING .)
    ,               reduce using rule 31 (expr -> STRING .)
    ]               reduce using rule 31 (expr -> STRING .)
    :               reduce using rule 31 (expr -> STRING .)
    {               reduce using rule 31 (expr -> STRING .)
    BREAK           reduce using rule 31 (expr -> STRING .)
    CONTINUE        reduce using rule 31 (expr -> STRING .)
    IF              reduce using rule 31 (expr -> STRING .)
    INTNUMBER       reduce using rule 31 (expr -> STRING .)
    FLOATNUMBER     reduce using rule 31 (expr -> STRING .)
    STRING          reduce using rule 31 (expr -> STRING .)
    (               reduce using rule 31 (expr -> STRING .)
    [               reduce using rule 31 (expr -> STRING .)
    RETURN          reduce using rule 31 (expr -> STRING .)
    PRINT           reduce using rule 31 (expr -> STRING .)
    FOR             reduce using rule 31 (expr -> STRING .)
    WHILE           reduce using rule 31 (expr -> STRING .)
    ID              reduce using rule 31 (expr -> STRING .)
    ZEROS           reduce using rule 31 (expr -> STRING .)
    ONES            reduce using rule 31 (expr -> STRING .)
    EYE             reduce using rule 31 (expr -> STRING .)


state 22

    (32) expr -> - . expr
    (28) expr -> . assignable
    (29) expr -> . INTNUMBER
    (30) expr -> . FLOATNUMBER
    (31) expr -> . STRING
    (32) expr -> . - expr
    (33) expr -> . expr '
    (34) expr -> . specialmatrixword ( expr )
    (35) expr -> . ( expr )
    (36) expr -> . [ matrixinitializer ]
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr MPLUS expr
    (42) expr -> . expr MMINUS expr
    (43) expr -> . expr MTIMES expr
    (44) expr -> . expr MDIVIDE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NEQ expr
    (47) expr -> . expr > expr
    (48) expr -> . expr < expr
    (49) expr -> . expr LEQ expr
    (50) expr -> . expr GEQ expr
    (26) assignable -> . ID
    (27) assignable -> . ID [ expr , expr ]
    (51) specialmatrixword -> . ZEROS
    (52) specialmatrixword -> . ONES
    (53) specialmatrixword -> . EYE
